# gitsmartcommit

./: .gitignore  LICENSE  README.md  pyproject.toml
gitsmartcommit/: generate_commit_message.py  git.py
tests/: test_commit_generator.py
