[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "smart-committer"
version = "0.1.1"
description = "Smart commit message generator from git diff"
readme = "README.md"
requires-python = ">=3.6"

[project.scripts]
quickcommit = "gitsmartcommit.git:main"

[tool.setuptools.packages.find]
where = ["."]